--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -1,6 +1,8 @@
-h1
-  | Editing Project
-= render 'form', project: @project
-= link_to 'Show', @project
-|  | 
-= link_to 'Back', projects_path
+= link_to @project, class: "text-2xl" do
+  i class="fas fa-chevron-left text-xl"
+    |  Back
+div class="max-w-full rounded overflow-hidden shadow-lg"
+  div class="px-6 py-4"
+    h2 class="flex justify-between font-medium text-3xl my-4"
+      span Editing Project
+    = render 'form', project: @project
