--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -1,4 +1,8 @@
-h1
-  | New Project
-= render 'form', project: @project
-= link_to 'Back', projects_path
+= link_to projects_path, class: "text-2xl" do
+  i class="fas fa-chevron-left text-xl"
+    |  Back
+div class="max-w-full rounded overflow-hidden shadow-lg"
+  div class="px-6 py-4"
+    h2 class="flex justify-between font-medium text-3xl my-4"
+      span New Project
+    = render 'form', project: @project
