--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -16,9 +16,9 @@
     = f.text_area :description, class:"form-textarea mt-1 block w-full", rows:"3", placeholder:"Project description."
   .field
     = f.label :status, class:"text-gray-700"
-    = f.select :status, options_for_select(Task::STATUS_OPTIONS), {}, class:"form-select mt-1 block w-full"
+    = f.select :status, options_for_select(Task.statuses), {}, class:"form-select mt-1 block w-full"
   .field
     = f.label :user_id, class: "text-gray-700"
-    = f.select :user_id, options_for_select(User.all.map {|u| [u.email, u.id]}), {}, class: "form-select mt-1 block w-full"
+    = f.select :user_id, options_for_select(@task.project.team.members.map {|u| [u.email, u.id]}, [@task.user.email, @task.user.id]), {}, class: "form-select mt-1 block w-full"
   .actions
     = f.submit
